# atomixer

./: .cvsignore  .gitignore  AStar.cc  AStar.hh  AStar2.cc  AStar2.hh  AStarState.cc  AStarState.hh  AUTHORS  Atom.cc  Atom.hh  BitVector.hh  Board.cc  Board.hh  CacheState.hh  Dir.cc  Dir.hh  HashTable.hh  IDAStar.cc  IDAStar.hh  IDAStarCacheState.hh  IDAStarState.hh  Level.cc  Level.hh  Makefile  Makefile.am  Move.cc  Move.hh  PackedState.cc  PackedState.hh  Pos.cc  Pos.hh  Problem.cc  Problem.hh  README  RevState.hh  Size.hh  Size.hh.in  State.cc  State.hh  (+21 more)
levels/: 15-puzzle  adrien_01  adrien_02  adrien_03  adrien_04  adrien_05  adrien_06  adrienl_01  adrienl_02  adrienl_03  adrienl_04  adrienl_05  atomix_01  atomix_02  atomix_03  atomix_04  atomix_05  atomix_06  atomix_07  atomix_08  atomix_09  atomix_10  atomix_11  atomix_12  atomix_13  atomix_14  atomix_15  atomix_16  atomix_17  atomix_18  atomix_19  atomix_20  atomix_21  atomix_22  atomix_23  atomix_24  atomix_25  atomix_26  atomix_27  atomix_28  (+51 more)
