## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS = atomixer

atomixer_SOURCES = \
	AStar2.cc	\
	AStar2.hh	\
	Atom.cc		\
	Atom.hh		\
	Board.cc	\
	Board.hh	\
	Dir.cc		\
	Dir.hh		\
	HashTable.hh	\
	IDAStar.cc	\
	IDAStar.hh	\
	Level.cc	\
	Level.hh	\
	Move.cc		\
	Move.hh		\
	PackedState.cc	\
	PackedState.hh	\
	Pos.cc		\
	Pos.hh		\
	Problem.cc	\
	Problem.hh	\
	Size.hh		\
	State2.cc	\
	State2.hh	\
	main.cc
