dnl Process this file with autoconf to produce a configure script.

dnl Initialize with some random file to ensure the source is here.
AC_INIT(main.cc)
AC_CONFIG_AUX_DIR(aux)

AM_INIT_AUTOMAKE(atomixer, 0.0)

dnl Evaluate options.
AC_ARG_ENABLE(profile,
	[  --enable-profile        include profiling code],
	profile=yes
)

dnl Checks for programs.
AC_PROG_CXX
AC_LANG_CPLUSPLUS

AC_MSG_CHECKING([whether compiler is Compaq C++])
AC_TRY_RUN([int main () {
#if defined __DECCXX
return 0;
#else
#error No Compaq C++;
#endif
}],
[ compaq_cxx=yes; AC_MSG_RESULT(yes)],
[ compaq_cxx=no;  AC_MSG_RESULT(no) ])

if test x"$ac_cv_prog_gxx" = xyes; then
   #if test "$CXXFLAGS" = "-g O2"; then
     CXXFLAGS="-O6 -g -W -Wall -Winline -Wno-sign-compare -funroll-all-loops"
   #fi
   if test x"$profile" = xyes; then
     CXXFLAGS="$CXXFLAGS -pg"
   else
     CXXFLAGS="$CXXFLAGS -fomit-frame-pointer"
   fi
   case $(uname -m) in
     alpha)
       cpu=$(awk '/cpu model/ {print tolower($4)}' /proc/cpuinfo)
       CXXFLAGS="$CXXFLAGS -mcpu=$cpu"
       ;;
     i?86)
       CXXFLAGS="$CXXFLAGS -march=k6"
       ;;       
   esac
elif test x$compaq_cxx = xyes; then
   CXXFLAGS="$CXXFLAGS -fast -g3 -W -Wall -Wno-sign-compare -msg_display_tag -msg_disable intconlosbit -msg_disable boolexprconst -msg_disable signedonebitfld"
fi

AC_CHECK_HEADERS(hash_map ext/hash_map stdint.h)

# Compaq C++ has <sstream>, but it doesn't work...
AC_MSG_CHECKING([whether stringstream works])
AC_TRY_COMPILE([#include <sstream>],[std::ostringstream s;],
               [AC_MSG_RESULT(yes)
                AC_DEFINE(HAVE_SSTREAM)],
               [AC_MSG_RESULT(no)])

AC_MSG_CHECKING([for __attribute__ ((packed))])
AC_TRY_COMPILE([struct Foo { } __attribute__ ((packed));],[],
               [AC_MSG_RESULT(yes)
                AC_DEFINE(HAVE_ATTRIBUTE_PACKED)],
               [AC_MSG_RESULT(no)])


AC_OUTPUT(Makefile)
